# smart-memory

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  DESIGN_STANDARDS.md  MANIFEST.in  README.md  competitive_analysis.md  config.json  docker-compose.yml  index.html  plugin.json  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  test_wikipedia_grounder.py
.github/workflows/: auto-bump.yml  ci.yml  publish.yml
docs/plans/: 2026-02-05-implementation-plan.md  2026-02-05-ontology-grounded-extraction-design.md  2026-02-05-ontology-implementation-plan.md  2026-02-05-ontology-strategic-implementation-plan.md  2026-02-05-two-tier-extraction-pipeline-design.md  2026-02-05-use-cases-reference.md
docs/public/: .env.example  .npmrc  README.md  README_ANALYTICS.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
examples/: README.md  advanced_programming_tutor.py  background_processing_demo.py  conversation_aware_extraction_demo.py  conversational_assistant_example.py  custom_enricher_example.py  custom_evolver_example.py  custom_extractor_example.py  custom_grounder_example.py  decision_memory_example.py  huggingface_embeddings_example.py  memory_system_usage_example.py  ontology_demo.py  ontology_inference_e2e.py  pipeline_v2_example.py  reasoning_trace_example.py  self_learning_ontology_example.py  temporal_audit_trail.py  temporal_debugging.py  temporal_queries_basic.py  wikilink_demo.py  zettelkasten_example.py
scripts/: audit_hook_recall_strict.py  generate_seed_patterns.py  publish-release.sh  push_docs
smartmemory/: __init__.py  __version__.py  clear_all.py  cli.py  drift_detector.py  interfaces.py  procedure_matcher.py  schema_diff.py  schema_providers.py  scope_provider.py  smart_memory.py
smartmemory/claude_cli/: __init__.py  core.py  models.py  provider.py
smartmemory/clustering/: __init__.py  deduplicator.py  embedding.py  global_cluster.py  graph_aggregator.py  llm.py
smartmemory/code/: __init__.py  indexer.py  models.py  parser.py
smartmemory/configuration/: environment.py  loader.py  manager.py
smartmemory/conversation/: context.py  manager.py  session.py
smartmemory/decisions/: __init__.py  manager.py  queries.py
smartmemory/evolution/: __init__.py  cycle.py  diff_engine.py  models.py  registry.py  store.py  tracker.py
smartmemory/extraction/: extractor.py  models.py
smartmemory/graph/: base.py  indexes.py  ontology_graph.py  smartgraph.py
smartmemory/grounding/: schemas.py
smartmemory/inference/: __init__.py  engine.py  rules.py
smartmemory/managers/: __init__.py  debug.py  enrichment.py  evolution.py  monitoring.py
smartmemory/memory/: base.py  fast_ingestion_flow.py
smartmemory/metrics/: __init__.py  graph_health.py
smartmemory/models/: __init__.py  base.py  corpus.py  decision.py  drift_event.py  entity.py  entity_types.py  library.py  memory_item.py  ontology.py  opinion.py  reasoning.py  schema_snapshot.py
smartmemory/observability/: __init__.py  events.py  instrumentation.py  logging_filter.py  tracing.py
smartmemory/ontology/: entity_pair_cache.py  governance.py  governance_manager.py  layer_service.py  layered.py  manager.py  models.py  pattern_manager.py  promotion.py  registry.py  (+3 more)
smartmemory_app/: __init__.py  __main__.py  async_enrichment.py  cli.py  cli_code.py  cli_mcp.py  config.py  daemon.py  enrichment_queue.py  enrichment_worker.py  events_server.py  launch_metrics.py  lifecycle.py  lifecycle_api.py  lifecycle_config.py  local_api.py  patterns.py  recall_format.py  remote_backend.py  server.py  setup.py  setup_tui.py  storage.py  viewer_server.py
smartmemory_cc/: __init__.py  __main__.py  cli.py  event_sink.py  events_server.py  local_api.py  patterns.py  server.py  setup.py  storage.py  viewer_server.py
smartmemory_pkg/: cli.py  config.py  events_server.py  local_api.py  server.py  setup.py  storage.py  sync.py  viewer_server.py
tests/: analyze_gemma_errors.py  benchmark_extractors.py  benchmark_model_quality.py  conftest.py  manual_verify_corpus.py  test_readme_snippets.py  test_wikipedia_grounder.py
(+565 files in other folders)
