[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smartmemory"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",             # remote API calls (DIST-LITE-5)
    "fastapi>=0.110",          # DIST-LITE-4: local graph API + viewer
    "uvicorn>=0.29",           # DIST-LITE-4: viewer HTTP server
    "websockets>=12.0",        # DIST-LITE-3: lite WebSocket events server
    "click>=8.0",
    "keyring>=24.0",           # DIST-LITE-5: OS credential store for API keys
    "tomli-w>=1.0",            # DIST-LITE-5: TOML config writing (tomllib stdlib reads only)
    # filelock moved to [local] extra — only needed for SQLite write locking
    # smartmemory-core is in [local] extra — base install is remote-capable without it
]

[project.optional-dependencies]
local = [
    # smartmemory-core[lite] brings: core library + spaCy (hard dep) + usearch ([lite] extra)
    "smartmemory-core[lite]>=0.5.2",
    "filelock>=3.12",    # SQLite write locking across processes
]

[project.scripts]
smartmemory = "smartmemory_pkg.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["smartmemory_pkg"]
include = [
    "smartmemory_pkg/data/seed_patterns.jsonl",
    "smartmemory_pkg/static/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring real filesystem/subprocess (no mocks)",
]
