[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smartmemory"
version = "1.0.14"
requires-python = ">=3.11"
dependencies = [
    "smartmemory-core[lite]==0.6.1",   # EXACT pin — wrapper and core versions move in lockstep
    "filelock>=3.12",                    # cross-process SQLite write locking
    "fastmcp>=2.0",
    "httpx>=0.27",             # remote API calls (DIST-LITE-5)
    "fastapi>=0.110",          # DIST-LITE-4: local graph API + viewer
    "uvicorn>=0.29",           # DIST-LITE-4: viewer HTTP server
    "websockets>=12.0",        # DIST-LITE-3: lite WebSocket events server
    "click>=8.0",
    "keyring>=24.0",           # DIST-LITE-5: OS credential store for API keys
    "tomli-w>=1.0",            # DIST-LITE-5: TOML config writing (tomllib stdlib reads only)
]

[project.optional-dependencies]
tui = ["textual>=8.0"]

[project.scripts]
smartmemory = "smartmemory_app.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["smartmemory_app"]
include = [
    "smartmemory_app/data/seed_patterns.jsonl",
    "smartmemory_app/data/*.plist",
    "smartmemory_app/static/**/*",
    "smartmemory_app/hooks/*.sh",
    "smartmemory_app/skills/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring real filesystem/subprocess (no mocks)",
]
